@@ -57,9 +57,9 @@ See the variable `align-rules-list' for more details.")
 (require 'flymake)
 
 (defconst flymake-allowed-ruby-file-name-masks
-  '((".rb"   flymake-ruby-init)
-    (".rxml" flymake-ruby-init)
-    (".rjs"  flymake-ruby-init))
+  '(("\\.rb\\'"   flymake-ruby-init)
+    ("\\.rxml\\'" flymake-ruby-init)
+    ("\\.rjs\\'"  flymake-ruby-init))
   "Filename extensions that switch on flymake-ruby mode syntax checks.")
 
 (defconst flymake-ruby-error-line-pattern-regexp
@@ -75,10 +75,16 @@ See the variable `align-rules-list' for more details.")
     (list rails-ruby-command (list "-c" local-file))))
 
 (defun flymake-ruby-load ()
-  (setq flymake-allowed-file-name-masks (append flymake-allowed-file-name-masks flymake-allowed-ruby-file-name-masks))
-  (setq flymake-err-line-patterns (cons flymake-ruby-error-line-pattern-regexp flymake-err-line-patterns))
-  (flymake-mode t)
-  (local-set-key (kbd "\C-c d") 'flymake-display-err-menu-for-current-line))
+  (when (string-match
+         (format "\\(%s\\)"
+                 (string-join
+                  "\\|"
+                  (mapcar 'car flymake-allowed-ruby-file-name-masks)))
+         (buffer-file-name))
+    (setq flymake-allowed-file-name-masks (append flymake-allowed-file-name-masks flymake-allowed-ruby-file-name-masks))
+    (setq flymake-err-line-patterns (cons flymake-ruby-error-line-pattern-regexp flymake-err-line-patterns))
+    (flymake-mode t)
+    (local-set-key (kbd "\C-c d") 'flymake-display-err-menu-for-current-line)))
 
 (add-hook 'ruby-mode-hook 'flymake-ruby-load)
 
